# injection-shield

./: LICENSE  README.md  pyproject.toml
demo/: simple_agent.py
injection_shield/: __init__.py
injection_shield/crypto/: signature.py
injection_shield/enforcement/: channels.py  decorator.py  processor.py
src/crypto/: signature.py
tests/: test_enforcement.py  test_signature.py  test_tampering.py
